--- a/web-kana-backend.cabal
+++ b/web-kana-backend.cabal
@@ -23,13 +23,17 @@ executable web-kana-backend
     main-is:          Main.hs
 
     -- Modules included in this executable, other than Main.
-    -- other-modules:
+    other-modules:
+        KanaTables
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
     build-depends:
         base ^>=4.17.2.0,
+        containers,
+        bytestring,
+        text,
         warp,
-        twain
+        twain,
     hs-source-dirs:   app
     default-language: Haskell2010
