--- a/web-kana-backend.cabal
+++ b/web-kana-backend.cabal
@@ -24,6 +24,8 @@ executable web-kana-backend
 
     -- Modules included in this executable, other than Main.
     other-modules:
+        Routes,
+        Controllers,
         KanaTables
 
     -- LANGUAGE extensions used by modules in this package.
