--- a/web-kana-backend.cabal
+++ b/web-kana-backend.cabal
@@ -33,8 +33,8 @@ executable web-kana-backend
     build-depends:
         base ^>=4.17.2.0,
         containers,
-        bytestring,
         text,
+        random,
         warp,
         twain,
     hs-source-dirs:   app
