--- a/web-kana-backend.cabal
+++ b/web-kana-backend.cabal
@@ -38,5 +38,7 @@ executable web-kana-backend
         random,
         warp,
         twain,
+        HDBC,
+        HDBC-odbc
     hs-source-dirs:   app
     default-language: Haskell2010
