feat: Move db logic to Models.hs

--- a/web-kana-backend.cabal
+++ b/web-kana-backend.cabal
@@ -26,6 +26,7 @@ executable web-kana-backend
     other-modules:
         Routes,
         Controllers,
+        Models,
         KanaTables,
         RandomGenerators
 
