feat: Implement getScoreboardPage controller
For now, the scoreboard page (essentially an array of Players)
is sent to the frontend as a JSON array.
In order to be able to do that, we had to instance ToJSON
for our Player data type.
ToJSON is in the `aeson` package, and also deriving Generics
was needed.

--- a/web-kana-backend.cabal
+++ b/web-kana-backend.cabal
@@ -37,6 +37,7 @@ executable web-kana-backend
         containers,
         text,
         random,
+        aeson,
         warp,
         twain,
         HDBC,
